[Regression 5.7rc1] Kernel warning on boot __drm_mode_object_add
Since 5.7-rc1 multiple kernel warnings appears in my dmesg. The GPU is a MSI Radeon RX 570 Gaming X 4GB with two monitors daisy chained using DP1.2.
First warning: dmesg.txt
[ 1.656740] ------------[ cut here ]------------
[ 1.656755] WARNING: CPU: 5 PID: 216 at drivers/gpu/drm/drm_mode_object.c:45 __drm_mode_object_add+0xa1/0xb0 [drm]
[ 1.656755] Modules linked in: crc32c_intel xhci_pci(+) xhci_hcd amdgpu gpu_sched i2c_algo_bit ttm drm_kms_helper syscopyarea sysfillrect sysimgblt fb_sys_fops cec rc_core drm agpgart
[ 1.656761] CPU: 5 PID: 216 Comm: kworker/5:1 Not tainted 5.7.0-rc2-1-mainline #21
[ 1.656762] Hardware name: To Be Filled By O.E.M. To Be Filled By O.E.M./AB350 Pro4, BIOS P5.80 06/14/2019
[ 1.656769] Workqueue: events_long drm_dp_mst_link_probe_work [drm_kms_helper]
[ 1.656780] RIP: 0010:__drm_mode_object_add+0xa1/0xb0 [drm]
[ 1.656781] Code: 00 00 4c 89 f7 e8 df 93 4d f2 85 db b8 00 00 00 00 0f 4e c3 5b 5d 41 5c 41 5d 41 5e 41 5f c3 80 7f 40 00 74 8c 4d 85 c0 75 87 <0f> 0b eb 83 66 66 2e 0f 1f 84 00 00 00 00 00 0f 1f 44 00 00 45 31
[ 1.656782] RSP: 0018:ffffadabc05bfaf8 EFLAGS: 00010246
[ 1.656783] RAX: ffffffffc06dc120 RBX: ffff93877c665000 RCX: 0000000000000001
[ 1.656784] RDX: 00000000e0e0e0e0 RSI: ffff938773b9c618 RDI: ffff93877c665000
[ 1.656784] RBP: ffff938773b9c618 R08: 0000000000000000 R09: ffff938773b9c600
[ 1.656785] R10: 0000000000000000 R11: ffff938773ad21b4 R12: 00000000e0e0e0e0
[ 1.656785] R13: 0000000000000000 R14: ffffffffc057c140 R15: 0000000000000001
[ 1.656786] FS: 0000000000000000(0000) GS:ffff93877e940000(0000) knlGS:0000000000000000
[ 1.656787] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
[ 1.656787] CR2: 00007f7f6696f131 CR3: 00000003f105e000 CR4: 00000000003406e0
[ 1.656788] Call Trace:
[ 1.656801] drm_encoder_init+0x74/0x1a0 [drm]
[ 1.656870] ? amdgpu_dm_connector_funcs_reset+0x3d/0xa0 [amdgpu]
[ 1.656873] ? kmem_cache_alloc_trace+0x1b5/0x220
[ 1.656937] dm_dp_add_mst_connector+0x114/0x1f0 [amdgpu]
[ 1.656943] drm_dp_mst_port_add_connector+0x133/0x1c0 [drm_kms_helper]
[ 1.656950] drm_dp_send_link_address+0x36e/0x920 [drm_kms_helper]
[ 1.656957] drm_dp_check_and_send_link_address+0xad/0xd0 [drm_kms_helper]
[ 1.656962] drm_dp_mst_link_probe_work+0x94/0x180 [drm_kms_helper]
[ 1.656965] process_one_work+0x1da/0x3d0
[ 1.656967] worker_thread+0x4a/0x3d0
[ 1.656969] kthread+0x122/0x160
[ 1.656971] ? process_one_work+0x3d0/0x3d0
[ 1.656972] ? kthread_park+0x90/0x90
[ 1.656974] ret_from_fork+0x22/0x40
[ 1.656977] ---[ end trace 328664ac35a6c3f2 ]---
Bisecting the issue between 5.7rc1 (bad) and 5.6 (good) resulted in the following first bad commit: bisect.txt
c6385e503aeaf99511bc5f67c4cdf5d7926df45b is the first bad commit
commit c6385e503aeaf99511bc5f67c4cdf5d7926df45b
Author: Alex Deucher <alexander.deucher@amd.com>
Date: Tue Feb 4 13:21:52 2020 -0500
drm/amdgpu: drop legacy drm load and unload callbacks
We've moved the debugfs handling into a centralized place
so we can remove the legacy load an unload callbacks.
Tested-by: Thomas Zimmermann <tzimmermann@suse.de>
Acked-by: Christian König <christian.koenig@amd.com>
Signed-off-by: Alex Deucher <alexander.deucher@amd.com>
drivers/gpu/drm/amd/amdgpu/amdgpu_device.c | 5 -----
drivers/gpu/drm/amd/amdgpu/amdgpu_drv.c | 13 +++++++++++--
2 files changed, 11 insertions(+), 7 deletions(-)
The warnings are no longer present when reverting this commit on top of 5.7rc1.
Edited by Sibren Vasse