drm/amdgpu/display: create fake mst encoders ahead of time

Prevents a warning in the MST create connector case.

Bug: https://gitlab.freedesktop.org/drm/amd/-/issues/1108
Fixes: c6385e503aeaf9 ("drm/amdgpu: drop legacy drm load and unload callbacks")
Signed-off-by: Alex Deucher <alexander.deucher@amd.com>